syntax = "proto3";
package trpc.greeter;

option go_package = "rpc/greeter";

// HelloRequest is hello request.
message HelloRequest {
  string greeting = 1;
}

// HelloResponse is hello response.
message HelloResponse {
  int32  err_code = 1;
  string err_msg  = 2;
  string response = 3;
  int64  timestamp_msec = 4;
}

// Greeter handles hello request and echo message.
service Greeter {
  // Hello says hello.
  rpc Hello(HelloRequest) returns (HelloResponse);
}
